# IdeaGraph

./: .env.template  .gitignore  .gitmodules  LICENSE  README.md  README_ja.md  USAGE.md  USAGE_ja.md  docker-compose.yml  pyproject.toml  run_all_experiments.sh  serve_groid.sh
docs/: figures.md  ideagraph.md
experiments/configs/: EXP-101.yaml  EXP-102.yaml  EXP-103.yaml  EXP-104.yaml  EXP-105.yaml  EXP-106.yaml  EXP-201.yaml  EXP-202.yaml  EXP-203.yaml  EXP-204.yaml  EXP-205.yaml  EXP-206.yaml  EXP-207.yaml  EXP-208.yaml  EXP-209.yaml  EXP-301.yaml  EXP-302.yaml  EXP-303.yaml  EXP-304.yaml  EXP-305.yaml  EXP-306.yaml
experiments/configs/gpt4o/: EXP-101.yaml  EXP-102.yaml  EXP-103.yaml  EXP-104.yaml  EXP-105.yaml  EXP-106.yaml  EXP-201.yaml  EXP-202.yaml  EXP-203.yaml  EXP-204.yaml  EXP-205.yaml  EXP-206.yaml  EXP-207.yaml  EXP-208.yaml  EXP-209.yaml  EXP-210.yaml  EXP-301.yaml  EXP-302.yaml  EXP-303.yaml  EXP-304.yaml  EXP-305.yaml  EXP-306.yaml
experiments/configs/gpt5.2/: EXP-101.yaml  EXP-102.yaml  EXP-103.yaml  EXP-104.yaml  EXP-105.yaml  EXP-106.yaml  EXP-201.yaml  EXP-202.yaml  EXP-203.yaml  EXP-204.yaml  EXP-205.yaml  EXP-206.yaml  EXP-207.yaml  EXP-208.yaml  EXP-209.yaml  EXP-210.yaml  EXP-301.yaml  EXP-302.yaml  EXP-303.yaml  EXP-304.yaml  EXP-305.yaml  EXP-306.yaml
src/idea_graph/: __init__.py  cli.py  config.py  constants.py  db.py
src/idea_graph/api/: __init__.py  app.py
src/idea_graph/coi/: __init__.py  anchor_filter.py  cli.py  config.py
src/idea_graph/ingestion/: __init__.py  buffered_writer.py  crawler.py  dataset_loader.py  downloader.py  extractor.py  graph_writer.py  parallel.py  progress.py  rate_limiter.py
src/idea_graph/models/: __init__.py  evaluation.py  experiment.py
src/idea_graph/services/: __init__.py  aggregator.py  analysis.py  coi_converter.py  coi_runner.py  evaluation.py  experiment_cache.py  experiment_runner.py  prompt_context.py  proposal.py  storage.py  visualizer.py
src/idea_graph/services/visualizer/: __init__.py  _cross_loader.py  _exp_1xx.py  _exp_2xx.py  _exp_3xx.py  _loaders.py  _paper_figures.py  _paper_tables.py  _registry.py  _renderers.py  _stats.py  _style.py  _visualizer.py
static/css/: main.css
static/js/: app.js  i18n.js
templates/: index.html
tests/: test_api.py  test_crawler.py  test_dataset_loader.py  test_db.py  test_downloader.py  test_extractor.py  test_graph_writer.py  test_progress.py
tools/: check_chars.py
