[project]
name = "idea-graph"
version = "0.1.0"
description = "AI論文のナレッジグラフ構築・可視化ツール"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.0.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=0.3.0",
    "google-genai>=1.0.0",
    "pydantic>=2.0.0",
    "neo4j>=5.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.0.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.0.0",
    "httpx>=0.28.0",
    "arxiv>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[project.scripts]
idea-graph = "idea_graph.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
