[project]
name = "idea-graph"
version = "0.1.0"
description = "AI論文のナレッジグラフ構築・可視化ツール"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.0.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "google-genai>=1.0.0",
    "pydantic>=2.0.0",
    "neo4j>=5.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.0.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.0.0",
    "httpx>=0.28.0",
    "arxiv>=2.0.0",
    "rich>=13.0.0",
    "pillow>=12.1.0",
    "polars>=1.38.1",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "PyYAML>=6.0.0",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[dependency-groups]
coi = [
    "aiohttp>=3.0.0",
    "beautifulsoup4>=4.0.0",
    "httpx>=0.28.0",
    "lmdb>=1.0.0",
    "lxml>=5.0.0",
    "numpy>=1.0.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "protobuf>=4.0.0",
    "PyYAML>=6.0.0",
    "requests>=2.0.0",
    "spacy>=3.0.0",
    "tenacity>=8.0.0",
    "textstat>=0.7.0",
    "tqdm>=4.0.0",
    "nest-asyncio>=1.5.0",
    "scipdf @ git+https://github.com/titipata/scipdf_parser.git",
]

[project.scripts]
idea-graph = "idea_graph.cli:main"
coi = "idea_graph.coi.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
